fix passwords, disable `integrations` with manual spec edit for now
